--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -186,7 +186,7 @@ jobs:
       - run:
           name: RSpec - I
           command: |
-            TEST_FILES=$(circleci tests glob "spec/api/goggles/i*_spec.rb")
+            TEST_FILES=$(circleci tests glob "spec/api/goggles/im*_spec.rb" "spec/api/goggles/is*_spec.rb")
             echo "$TEST_FILES" | circleci tests run --command="xargs bundle exec rspec --color --order rand -f doc \
                  --format RspecJunitFormatter -o ~/test-results/rspec-i.xml" --verbose --split-by=timings
             ./tmp/cc-test-reporter format-coverage -t simplecov -o "./tmp/codeclimate.rspec-i.$CIRCLE_NODE_INDEX.json"
