--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -186,15 +186,21 @@ jobs:
       - run:
           name: RSpec - I
           # FIXME: for some reason *only here* the glob does't work and yields 0 files:
+          # - GLOB VERSION:
           # TEST_FILES=$(circleci tests glob "spec/api/goggles/i*_spec.rb")
           # echo "$TEST_FILES" | circleci tests run --command="xargs bundle exec rspec --color --order rand -f doc \
           #       --format RspecJunitFormatter -o ~/test-results/rspec-i.xml" --verbose --split-by=timings
           # ./tmp/cc-test-reporter format-coverage -t simplecov -o "./tmp/codeclimate.rspec-i.$CIRCLE_NODE_INDEX.json"
+          # - LISTED FILES VERSION:
+          # circleci tests run --command="bundle exec rspec --color --order rand -f doc \
+          #     --format RspecJunitFormatter -o ~/test-results/rspec-i.xml \
+          #     spec/api/goggles/import_queues_api_spec.rb spec/api/goggles/issues_api_spec.rb" \
+          #     --verbose --split-by=timings
           command: |
-            circleci tests run --command="bundle exec rspec --color --order rand -f doc \
-                --format RspecJunitFormatter -o ~/test-results/rspec-i.xml \
-                spec/api/goggles/import_queues_api_spec.rb spec/api/goggles/issues_api_spec.rb" \
-                --verbose --split-by=timings
+            TEST_FILES=$(circleci tests glob "spec/api/goggles/i*_spec.rb")
+            echo "ALL I* FILES: $TEST_FILES"
+            echo "$TEST_FILES" | circleci tests run --command="xargs bundle exec rspec --color --order rand -f doc \
+                 --format RspecJunitFormatter -o ~/test-results/rspec-i.xml" --verbose --split-by=timings
             ./tmp/cc-test-reporter format-coverage -t simplecov -o "./tmp/codeclimate.rspec-i.$CIRCLE_NODE_INDEX.json"
       - store_test_results:
           path: ~/test-results
@@ -383,50 +389,52 @@ workflows:
   test-and-build-latest:
     jobs:
       - persisted-data
-      - brakeman:
-          requires:
-            - persisted-data
-      - rubocop:
-          requires:
-            - persisted-data
-      - zeitwerk:
-          requires:
-            - persisted-data
+      # - brakeman:
+      #     requires:
+      #       - persisted-data
+      # - rubocop:
+      #     requires:
+      #       - persisted-data
+      # - zeitwerk:
+      #     requires:
+      #       - persisted-data
 
-      - rspec-A-B:
-          requires:
-            - brakeman
-            - rubocop
-            - zeitwerk
+      # - rspec-A-B:
+      #     requires:
+      #       - brakeman
+      #       - rubocop
+      #       - zeitwerk
 
-      - rspec-C-F:
-          requires:
-            - brakeman
-            - rubocop
-            - zeitwerk
+      # - rspec-C-F:
+      #     requires:
+      #       - brakeman
+      #       - rubocop
+      #       - zeitwerk
 
       - rspec-I:
           requires:
-            - brakeman
-            - rubocop
-            - zeitwerk
+            - persisted-data
+          # requires:
+          #   - brakeman
+          #   - rubocop
+          #   - zeitwerk
 
-      - rspec-L-M:
-          requires:
-            - rspec-A-B
-      - rspec-R-S:
-          requires:
-            - rspec-I
-      - rspec-T-U:
-          requires:
-            - rspec-C-F
+      # - rspec-L-M:
+      #     requires:
+      #       - rspec-A-B
+      # - rspec-R-S:
+      #     requires:
+      #       - rspec-I
+      # - rspec-T-U:
+      #     requires:
+      #       - rspec-C-F
 
-      - upload-coverage:
-          requires:
-            - rspec-L-M
-            - rspec-R-S
-            - rspec-T-U
+      # - upload-coverage:
+      #     requires:
+      #       - rspec-L-M
+      #       - rspec-R-S
+      #       - rspec-T-U
 
-      - docker-latest:
-          requires:
-            - upload-coverage
+      # - docker-latest:
+      #     requires:
+      #       - upload-coverage
