--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ version: 2.1
 #     default: ""
 
 orbs:
-  ruby: circleci/ruby@2.3.0
+  ruby: circleci/ruby@2.5.3
 
 common-config: &common-config
   resource_class: large
@@ -77,7 +77,13 @@ jobs:
       - checkout
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0723
+          key: goggles_api-v0807
+      - run:
+          name: Apply ActiveSupport logger patch
+          # Patch the logger loading order issue in activesupport 6.1.7.8
+          # NOTE: apply this after the install-deps step (or it will be overwritten)
+          command: |
+            patch -p1 -N -d vendor/bundle/ruby/3.1.0/gems/activesupport-6.1.7.8 < patches/activesupport-6.1.7.8-logger.patch
       - ruby/rubocop-check:
           app-dir: ~/goggles_api
           label: Rubocop
@@ -90,7 +96,12 @@ jobs:
       - checkout
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0723
+          key: goggles_api-v0807
+      - run:
+          name: Apply ActiveSupport logger patch
+          # Patch the logger loading order issue in activesupport 6.1.7.8
+          command: |
+            patch -p1 -N -d vendor/bundle/ruby/3.1.0/gems/activesupport-6.1.7.8 < patches/activesupport-6.1.7.8-logger.patch
       - run:
           name: Brakeman
           command: |
@@ -105,7 +116,12 @@ jobs:
           at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0723
+          key: goggles_api-v0807
+      - run:
+          name: Apply ActiveSupport logger patch
+          # Patch the logger loading order issue in activesupport 6.1.7.8
+          command: |
+            patch -p1 -N -d vendor/bundle/ruby/3.1.0/gems/activesupport-6.1.7.8 < patches/activesupport-6.1.7.8-logger.patch
       - run:
           <<: *common-db-setup
       - run:
@@ -123,7 +139,12 @@ jobs:
           at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0723
+          key: goggles_api-v0807
+      - run:
+          name: Apply ActiveSupport logger patch
+          # Patch the logger loading order issue in activesupport 6.1.7.8
+          command: |
+            patch -p1 -N -d vendor/bundle/ruby/3.1.0/gems/activesupport-6.1.7.8 < patches/activesupport-6.1.7.8-logger.patch
       - run:
           <<: *common-db-setup
       - run:
@@ -151,7 +172,12 @@ jobs:
           at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0723
+          key: goggles_api-v0807
+      - run:
+          name: Apply ActiveSupport logger patch
+          # Patch the logger loading order issue in activesupport 6.1.7.8
+          command: |
+            patch -p1 -N -d vendor/bundle/ruby/3.1.0/gems/activesupport-6.1.7.8 < patches/activesupport-6.1.7.8-logger.patch
       - run:
           <<: *common-db-setup
       - run:
@@ -180,7 +206,12 @@ jobs:
           at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0723
+          key: goggles_api-v0807
+      - run:
+          name: Apply ActiveSupport logger patch
+          # Patch the logger loading order issue in activesupport 6.1.7.8
+          command: |
+            patch -p1 -N -d vendor/bundle/ruby/3.1.0/gems/activesupport-6.1.7.8 < patches/activesupport-6.1.7.8-logger.patch
       - run:
           <<: *common-db-setup
       - run:
@@ -212,7 +243,12 @@ jobs:
           at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0723
+          key: goggles_api-v0807
+      - run:
+          name: Apply ActiveSupport logger patch
+          # Patch the logger loading order issue in activesupport 6.1.7.8
+          command: |
+            patch -p1 -N -d vendor/bundle/ruby/3.1.0/gems/activesupport-6.1.7.8 < patches/activesupport-6.1.7.8-logger.patch
       - run:
           <<: *common-db-setup
       - run:
@@ -241,7 +277,12 @@ jobs:
           at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0723
+          key: goggles_api-v0807
+      - run:
+          name: Apply ActiveSupport logger patch
+          # Patch the logger loading order issue in activesupport 6.1.7.8
+          command: |
+            patch -p1 -N -d vendor/bundle/ruby/3.1.0/gems/activesupport-6.1.7.8 < patches/activesupport-6.1.7.8-logger.patch
       - run:
           <<: *common-db-setup
       - run:
@@ -270,7 +311,12 @@ jobs:
           at: ~/goggles_api/tmp
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0723
+          key: goggles_api-v0807
+      - run:
+          name: Apply ActiveSupport logger patch
+          # Patch the logger loading order issue in activesupport 6.1.7.8
+          command: |
+            patch -p1 -N -d vendor/bundle/ruby/3.1.0/gems/activesupport-6.1.7.8 < patches/activesupport-6.1.7.8-logger.patch
       - run:
           <<: *common-db-setup
       - run:
@@ -310,7 +356,12 @@ jobs:
       - checkout
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0723
+          key: goggles_api-v0807
+      - run:
+          name: Apply ActiveSupport logger patch
+          # Patch the logger loading order issue in activesupport 6.1.7.8
+          command: |
+            patch -p1 -N -d vendor/bundle/ruby/3.1.0/gems/activesupport-6.1.7.8 < patches/activesupport-6.1.7.8-logger.patch
       - setup_remote_docker:
           version: default
           docker_layer_caching: true
@@ -328,7 +379,12 @@ jobs:
       - checkout
       - ruby/install-deps:
           app-dir: ~/goggles_api
-          key: goggles_api-v0723
+          key: goggles_api-v0807
+      - run:
+          name: Apply ActiveSupport logger patch
+          # Patch the logger loading order issue in activesupport 6.1.7.8
+          command: |
+            patch -p1 -N -d vendor/bundle/ruby/3.1.0/gems/activesupport-6.1.7.8 < patches/activesupport-6.1.7.8-logger.patch
       - setup_remote_docker:
           version: default
           docker_layer_caching: true
